--- a/index.html
+++ b/index.html
@@ -11,30 +11,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" id="favicon">
     <script src="script.js" defer></script>
     <title>Tom's profile</title>
   </head>
   <body>
-    <video autoplay muted playsinline loop id="background-video">
-      <source src="images/video_background.mp4" type="video/mp4">
+    <div class="col-12">
+      <video autoplay muted playsinline loop id="background-video">
+        <source src="images/video_background.mp4" type="video/mp4">
     </video>
+  </div>
+  <div class="col-12">
     <div class="content">
       <h1>Tom Duchambon</h1>
       <img src="images/profile_pic.jpeg" width="100px" alt="Tom Duchambon" class="img-round">
       <div class="description">
         <h3>Junior Web developer, musician and writer from Paris.</h>
       </div>
-    <div id="social-logo">
-        <a href="https://www.instagram.com/cesttomrain/" target="_blank" class="socials">
-                <i class="fa-brands fa-instagram"></i></a>
-        <a href="https://github.com/TomDuchambon" target="_blank" class="socials">
-                <i class="fa-brands fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/tom-duchambon-6a44a4182/" target="_blank" class="socials">
-                <i class="fa-brands fa-linkedin-in"></i></a>
-        <a href="mailto:tom.duchambon@gmail.com" target="_blank" class="socials">
-                <i class="fa-regular fa-envelope"></i></a>
+      <div id="social-logo">
+          <a href="https://www.instagram.com/cesttomrain/" target="_blank" class="socials">
+                  <i class="fa-brands fa-instagram"></i></a>
+          <a href="https://github.com/TomDuchambon" target="_blank" class="socials">
+                  <i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/tom-duchambon-6a44a4182/" target="_blank" class="socials">
+                  <i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="mailto:tom.duchambon@gmail.com" target="_blank" class="socials">
+                  <i class="fa-regular fa-envelope"></i></a>
+      </div>
     </div>
+  </div>
   </body>
 </html>
